--- a/Produtos1.html
+++ b/Produtos1.html
@@ -18,18 +18,17 @@
     </style>
 </head>
 <body>
-        <!-- Barra de navegação -->
-        <div class="navbar">
+    <header class="top-header">
+        <nav class="navbar">
             <a href="index.html">Início</a>
             <a href="Suporte.html">Suporte</a>
-        </div>
-
+        </nav>
+        <h1 class="site-title">Ifinitty Tech</h1>
         <a href="index.html">
-            <img src="imagens/logo.jpg" alt="Logo Ifinitty Tech" class="logo-top-right">
+            <img src="imagens/logo.jpg" alt="Logo Ifinitty Tech" class="logo">
         </a>
-    <!-- Cabeçalho -->
-    <div class="header"><h3> Ifinitty Tech </h3>
-    </div>
+    </header>
+    
 
          <!-- Link para o carrinho -->
     <a href="carrinho.html" class="floating-cart" title="Ver carrinho">🛒</a>
@@ -45,8 +44,6 @@
         <div class="container" id="products">
             <div class="product" data-name="Fone de Ouvido">
                 <h3>Fone de ouvido</h3>
-                <img src="imagens/AnFone.jpg" alt="An Fone de Ouvido"  style="width:40%">
-                <br>
                 <img src="imagens/Fone.jpg" alt="Fone de Ouvido"  style="width:40%">
                 <br>
                 <h3> Detalhes do Produto:</h3>
@@ -109,7 +106,7 @@
                         <a href="https://www.instagram.com/ifinitty_tech" target="_blank" style="margin: 0 10px;">
                             <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" style="width: 32px; height: 32px;">
                         </a>
-                        <a href="https://wa.me/558994580139" target="_blank" style="margin: 0 10px;">
+                        <a href="https://wa.me/558994338863" target="_blank" style="margin: 0 10px;">
                             <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" style="width: 32px; height: 32px;">
                         </a>
                         <p style="margin-top: 10px;">&copy; 2025 Ifinitty Tech</p>
