--- a/Suporte.html
+++ b/Suporte.html
@@ -110,6 +110,7 @@
         <nav class="navbar">
             <a href="index.html">Início</a>
             <a href="Suporte.html">Suporte</a>
+            <a href="combo.html">Dia dos Namorados</a>
         </nav>
         <h1 class="site-title">Ifinitty Tech</h1>
         <a href="index.html">
