--- a/amor_completo.html
+++ b/amor_completo.html
@@ -22,6 +22,7 @@
         <nav class="navbar">
             <a href="index.html">Início</a>
             <a href="Suporte.html">Suporte</a>
+            <a href="combo.html">Dia dos namorados</a>
         </nav>
         <h1 class="site-title">Ifinitty Tech</h1>
         <a href="index.html">
@@ -34,36 +35,36 @@
     <a href="carrinho.html" class="floating-cart" title="Ver carrinho">🛒</a>
 
 
-    <!-- Barra de busca -->
-    <div class="search-bar">
-        <input type="text" id="search" placeholder="Buscar produto..." onkeyup="searchProducts()">
-        <small style="color: red;">*Digite o nome do produto </small>
-
-    </div>
-
         <div class="container" id="products">
-            <div class="product" data-name="Headphone">
-                <h3>Headphone Bluetooth</h3>
-                <img src="imagens/Hadfone.webp" alt="Headphone" style="width: 60%;">
+            <div class="product" data-name="Combo Amor Completo">
+                <h3>Combo Amor Completo</h3>
+                <img src="imagens/amor_completo.jpg" alt="combo Amor Completo">
+                <h3>Cores dos Relógios</h3>
+                <img src="imagens/RelogioP.jpg" alt="Combo Amor Completo" style="width: 60%;">
                 <br>
-                <img src="imagens/headphoneB.webp" alt="Headphone" style="width: 60%;">
+                <img src="imagens/RelogioB.jpg" alt="Combo Amor Completo" style="width: 60%;">
+                <br>
+                <img src="imagens/RelogioR.jpg" alt="Combo Amor Completo" style="width: 60%;">
+                <br>
+                <h3>Polvo de Pelúcia Bipolar</h3>
+                <img src="imagens/polvo.jpg" alt="Combo Amor Completo" style="width: 60%;">
+                <br>
+                <h4>💘 Combo Amor Completo</h4>
+                <p>Tecnologia, estilo e carinho num só presente.
+Mostre seu amor com um combo que fala por você.</p>
                 
-                <h4>Fone de ouvido Bluetooth Sem Fio Headphone Bluetooth Recarregável P9 Air Top Casual Esportivo</h4>
-                <p> • Bateria prolongada</p>
-                <p> • Atrativo</p>
-                <p> • Ótimo Volume</p>
-                <p> • Tempo de carregamento: Cerca de 2h</p>
-                <p> • Microfone embutido</p>
-                <h3>R$ 58,10</h3>
+
+                <h3>R$ 98,90</h3>
     
                 <div class="options">
-                    <label for="color4">Cor:</label>
-                    <select id="color4">
+                    <label for="color5">Cor do relógio:</label>
+                    <select id="color5">
                         <option value="Preto">Preto</option>
+                        <option value="Rosa">Rosa</option>
                         <option value="Branco">Branco</option>
                     </select>
                 </div>
-                <button onclick="addToCart('Headphone', 58.10, null, document.getElementById('color4').value)">Adicionar ao Carrinho</button>
+                <button onclick="addToCart('Combo Amor Completo', 98.90, null, document.getElementById('color5').value)">Adicionar ao Carrinho</button>
 
             </div>
             </div>
