--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <nav class="navbar">
             <a href="index.html">Início</a>
             <a href="Suporte.html">Suporte</a>
+            <a href="combo.html">Dia dos namorados</a>
         </nav>
         <h1 class="site-title">Ifinitty Tech</h1>
         <a href="index.html">
@@ -85,7 +86,7 @@
             <a href="Relogios.html">Relógio Digital - 3 tipos de cor</a>
             <br>
             <br>
-            <h3>R$ 57,40</h3>
+            <h3>R$ 62,40</h3>
             <!-- Opções de Tamanho e Cor -->
             <div class="options">
                 <label for="color1">Cor:</label>
@@ -95,7 +96,7 @@
                     <option value="Branco">Branco</option>
                 </select>
                 <!-- Correção sugerida -->
-                <button onclick="addToCart('Relógio Digital', 57.40, null, document.getElementById('color1').value)">Adicionar ao Carrinho</button>
+                <button onclick="addToCart('Relógio Digital', 62.40, null, document.getElementById('color1').value)">Adicionar ao Carrinho</button>
 
             </div>
         </div>
@@ -185,7 +186,7 @@
                 <a href="ProdutosM.html">Headphone Bluetooth Recarregável P9 Air Top Casual Esportivo
 
                 </a>
-                <h3>R$56,10</h3>
+                <h3>R$58,10</h3>
                 <!-- Opções de Tamanho e Cor -->
                 <div class="options">
                     <label for="color4">Cor:</label>
@@ -194,7 +195,7 @@
                         <option value="Branca">Branca</option>
                     </select>
                 </div>
-                <button onclick="addToCart('Headphone', 56.10, null, document.getElementById('color4').value)">Adicionar ao Carrinho</button>
+                <button onclick="addToCart('Headphone', 58.10, null, document.getElementById('color4').value)">Adicionar ao Carrinho</button>
             
                 
             </div>
