--- a/Polvo.html
+++ b/Polvo.html
@@ -22,7 +22,7 @@
         <nav class="navbar">
             <a href="index.html">Início</a>
             <a href="Suporte.html">Suporte</a>
-            <a href="combo.html">Dia dos namorados</a>
+            <a href="combo.html">Promoção</a>
         </nav>
         <h1 class="site-title">Ifinitty Tech</h1>
         <a href="index.html">
