--- a/dobrável.html
+++ b/dobrável.html
@@ -55,11 +55,11 @@
                 
                 <br>
                 
-            <h3>R$ 22,30</h3>
+            <h3>R$ 25,30</h3>
 
 
 
-            <button onclick="addToCart('Maquininha', 22.30)">Adicionar ao Carrinho</button>
+            <button onclick="addToCart('Suporte', 25.30)">Adicionar ao Carrinho</button>
         </div>
     </div>
 
