--- a/Finalizando.html
+++ b/Finalizando.html
@@ -154,8 +154,8 @@
             }
 
             if (cep === "64750-000" || cep === "64755-000") {
-                deliveryFee = 2.00;
-                deliveryInfo.innerHTML = "Frete de R$ 2,00 para este CEP!";
+                deliveryFee = 0.00;
+                deliveryInfo.innerHTML = "Frete grátis para este CEP!";
             } else if (cep.startsWith("64")) {
                 deliveryFee = 10.00;
                 deliveryInfo.innerHTML = "Frete: R$ 5,00 (entrega para o Piauí).";
